fix slight misalignment of save and cancel

--- a/src/styles/PatientInfoStyles.css
+++ b/src/styles/PatientInfoStyles.css
@@ -39,7 +39,7 @@
 }
 .cancel-button {
   position: absolute;
-  top: 635px;
+  top: 636px;
   right: 0px;
 }
 .archive-button {
